--- a/09_Hands_On_ML_DL_TF.ipynb
+++ b/09_Hands_On_ML_DL_TF.ipynb
@@ -8,6 +8,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Some basic tests to test the variable scope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph\n",
+    "x1 = tf.Variable(5)\n",
+    "x1.graph is tf.get_default_graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
